name:                missile-command
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Bhavani, Andrew, Eric
maintainer:          rjhala@eng.ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  ghc-options:        -W
  exposed-modules:    Model.Board,
                      Model.Score
                      
  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       base,
                       parsec, 
                       containers, 
                       mtl,
                       random

  hs-source-dirs:      src
  default-language:    Haskell2010

executable missile-command
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Model.Board,
                       Model.Score
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base, parsec, containers, mtl,
                    filepath,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    missile-command,
                    random
  other-modules:    Common 
